--- a/DotNetCoreSqlDb/appsettings.json
+++ b/DotNetCoreSqlDb/appsettings.json
@@ -6,6 +6,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "AZURE_SQL_CONNECTIONSTRING": "Server=(localdb)\\mssqllocaldb;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "AZURE_SQL_CONNECTIONSTRING": "Server=tcp:msdocs-core-sql-235-server.database.windows.net;Authentication=Active Directory Default; Database=msdocs-core-sql-235-database;"
   }
 } 
